datahub-help/overlays/prod/stasis-reactor-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    labels:
        app: dh-docs-server
    annotations:
        kustomize.config.k8s.io/needs-hash: "true"
        kustomize.config.k8s.io/behavior: replace
    name: stasis-reactor
spec:
    host: help.datahub.redhat.com
    port:
        targetPort: 8080-tcp
    to:
        kind: Service
        name: stasis-reactor
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:brUKLA==,iv:o5Tj9LIWIv8KZ3IFyxtN3GdieulVrJBjCFDrJNNBTcc=,tag:4nZ/CuhvbVbXAwYa+uJ8mg==,type:str]
        certificate: ENC[AES256_GCM,data:1cl4ggyv+HdPn5jFLXvBcpc5xeAExgtTop/KcjwYrZL2XJICxcPHPpY0ekNQ6IIHo0wVsNCzWw45fMpmMKWRK2sP73DSy3c0KakMggWdj5Hurb+g17+xihirMQFbP6cv+ggbpXe8yxT2B9CIrrLlL1Lh9lVud3a4/IPxldHgqRg5r0RF5xpbvQbQL+QAebOUDnkuYZ+POcqb7fupGGiJ17G3E1LfWfYNhkt8j2zBXqByHurb+PlbH6cofSX0xXPA2SIBQ5ASOjpEDDZmK3jcYmxWIVUH3JscbeAlVSKpE/4PAQqgTd1zxBC9zJGIA6umV+kzEQ7+I9E3xdiJ8Pa3llh4DnlJFPTXoMF8LccuV+HGSRKMs+ZTvxelNbbM7Sd7JHDZyLlwNEwssXorrQG2z+8HxylgH8XEgTt7Cjvc4DQd2E9UaOdzIBKAVE42cqdqxNHqCYdaFUB [...]
        key: ENC[AES256_GCM,data:Unbym/SkuQQlV+siPWDEC+EYR6Dnk2exdkuOwP7BeE7WBAwWwz2dGBKcCGmCCwfFYa9ofQ19AjnhMfzY7PTq0VCfhXnx/LormaPM73Xc/LA8vkFrn3x8trZ4avs5g+gIBXKps76x+A9Wyytj02L+rqjVpQi62RZyzkWQQKvo2FV/AA8PqSTmATRFj2rkc8MG12J3vAcE2iVbGv0Csj9DnSpTpMJQT3oHGOuXSQzJrhLkNKyib77TycGqAJGhiwcL1RkyYXExHa0LFBrpElSQrh8fA5p7GrgBf9z+CKBWsjxNHvhYU4e8u7Ug3w43XhJGU9HNjfUYCcMomDknvssgJdQcwHt6jfJ+VrCSFxzSFJCf6Mt6uKIZ/mCOmGwjyQ3W6yHzOXQKhLnLQQKJaXRBPA5O8bRm2Vca3yPxFN+chjeMxYF37eQXKAKxiyvKITvLYdvbXZhmcrIvUMq5tUP [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2022-06-09T19:05:42Z'
    mac: ENC[AES256_GCM,data:1mPbR2ZoToqe/pSwEt2d64h0yv4gVVtORE/hfD6G6GnTTVWRWOHZQZM8QoymJKYPdus2L2IqDILlZJe17I1sdha8nz2fJpbVlqErLk3qrAro0zUaTzqgCpTxTnothZNQSsejXUoHNW7IptFG3OAtAE1/FfPwf30+KcHOuiaJeC4=,iv:yJgYOF+GKDd/RqWTkXNY8vNDZBuMdVU3flB2Ry9tZWk=,tag:t67KyQSqhr6s5WQs2tymMg==,type:str]
    pgp:
    -   created_at: '2021-11-09T20:00:53Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/YwhOyOjNDy8EBLjyR2TqUHFXavqDLTLDQ45fDegXUQaY
[...]
            6rKXEHthZ0AXYLwxmVWZbbptyoHFdCcYCoiG7WGRFw==
            =WRkL
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.1
